--- a/timelogs/timelog-szemplinski.org
+++ b/timelogs/timelog-szemplinski.org
@@ -15,8 +15,11 @@ CLOCK: [2014-02-18 Tue 14:57]--[2014-02-18 Tue 15:20] =>  0:23
 CLOCK: [2014-02-18 Tue 13:40]--[2014-02-18 Tue 14:32] =>  0:52
 - Class time
 *** TODO Django tutorials                                        :rszempli:
-**** TODO Go through the main site tutorial [4/5] [80%]
+**** DONE Go through the main site tutorial [5/5] [100%]
+CLOSED: [2014-02-23 Sun 15:06]
 :LOGBOOK:
+- CLOSING NOTE [2014-02-23 Sun 15:06] \\
+  Finished all them tutorials on django webpage
 CLOCK: [2014-02-19 Wed 22:06]--[2014-02-19 Wed 23:39] =>  1:33
 - Learned some about making some models and the very sexy database viewer
   web page thing and some url stuffzzzz....
@@ -25,10 +28,17 @@ CLOCK: [2014-02-19 Wed 22:06]--[2014-02-19 Wed 23:39] =>  1:33
 - [X] Part 2
 - [X] Part 3
 - [X] Part 4
-- [ ] Part 5
+- [X] Part 5
 *** TODO Get more experience with org-mode                       :rszempli:
 **** TODO Look at more tutorials on it[1/3]
 - [X] Learn more hotkeys
 - [ ] Memorize the hotkeys
 - [ ] Learn to like org-mode
-*** TODO Tutorial on Angular.js [[http://docs.angularjs.org/api][Documentation]]                    :rszempli:
+*** TODO Tutorial on Angular.js [[http://docs.angularjs.org/api][Documentation]]                    :rszempli
+*** TODO Work on Project CRUD
+:LOGBOOK:
+CLOCK: [2014-02-23 Sun 15:06]--[2014-02-23 Sun 16:48] =>  1:42
+- Trying to get the forms to work for projects but failed to understand how everything
+  links up in our project. Me and Ben need to talk to Dustin or someone.
+:END:
+
