Floating nav for base.html

--- a/timelogs/timelog-akeenan.org
+++ b/timelogs/timelog-akeenan.org
@@ -63,4 +63,9 @@ CLOCK: [2014-02-21 Fri 17:30]--[2014-02-21 Fri 22:07] =>  4:37
 CLOCK: [2014-02-21 Fri 16:55]--[2014-02-21 Fri 17:27] =>  0:32
 CLOCK: [2014-02-21 Fri 16:40]--[2014-02-21 Fri 16:43] =>  0:03
 :END:
+** IN-PROGRESS Make second base.html for choices
+:LOGBOOK:
+CLOCK: [2014-02-23 Sun 23:04]--[2014-02-23 Sun 23:24] =>  0:20
+- Added non-static version of navbar
+:END:
 
