--- a/timelogs/timelog-dwaldron.org
+++ b/timelogs/timelog-dwaldron.org
@@ -64,6 +64,11 @@ CLOCK: [2014-02-25 Tue 15:00]--[2014-02-25 Tue 17:00] =>  2:00
 *** Studio class time :dustin:
 
 
+*** Worked on breadcrumb menu
+CLOCK: [2014-02-26 Wed 19:00]--[2014-02-26 Wed 22:00] =>  3:00
+- Added more functionality to breadcrumb menu. Need to find better way to keep track of urls
+
+
 ** WEEK 4 (3/4/14 - 3/10/14)
 *** Studio class time :dustin:
 
@@ -127,13 +132,13 @@ CLOCK: [2014-02-25 Tue 15:00]--[2014-02-25 Tue 17:00] =>  2:00
 
 * CLOCKTABLE CHART
 #+BEGIN: clocktable :maxlevel 3 :scope file
-Clock summary at [2014-02-26 Wed 16:27]
+Clock summary at [2014-02-26 Wed 21:36]
 
 | Headline                                        | Time    |       |      |
 |-------------------------------------------------+---------+-------+------|
-| *Total time*                                    | *26:00* |       |      |
+| *Total time*                                    | *29:00* |       |      |
 |-------------------------------------------------+---------+-------+------|
-| SPRING 2014 SOFTWARE STUDIO III LOG             | 26:00   |       |      |
+| SPRING 2014 SOFTWARE STUDIO III LOG             | 29:00   |       |      |
 | \__ WEEK 1 (2/11/14 - 2/17/14)                  |         | 12:00 |      |
 | \_____ Studio class time                        |         |       | 2:00 |
 | \_____ Studio class time                        |         |       | 2:00 |
@@ -146,7 +151,8 @@ Clock summary at [2014-02-26 Wed 16:27]
 | \_____ Worked on templates and boostrap navs    |         |       | 3:00 |
 | \_____ Worked more on templates and breadcrumbs |         |       | 2:00 |
 | \_____ Worked on admin page and templates       |         |       | 4:00 |
-| \__ WEEK 3 (2/25/14 - 3/3/14)                   |         |  2:00 |      |
+| \__ WEEK 3 (2/25/14 - 3/3/14)                   |         |  5:00 |      |
 | \_____ Studio class time                        |         |       | 2:00 |
+| \_____ Worked on breadcrumb menu                |         |       | 3:00 |
 #+END:
 
