--- a/timelogs/timelog-southworth.org
+++ b/timelogs/timelog-southworth.org
@@ -6,10 +6,10 @@
 
 
 * Pre week 1 (2-18)
-*** Learning how to make this org stuff work
+** Learning how to make this org stuff work
   CLOCK: [2014-02-16 Sun 21:52]--[2014-02-17 Mon 01:12] =>  3:20
-*** Didn't clock correctly because of machine crashes. Which were due to having no space on my X-drive.
-*** DONE Reviewing org mode commands
+** Didn't clock correctly because of machine crashes. Which were due to having no space on my X-drive.
+** DONE Reviewing org mode commands
    CLOSED: [2014-02-18 Tue 15:22]
    - CLOSING NOTE [2014-02-18 Tue 15:22] \\
      Probably will still need some work, but good enough for now.
@@ -27,7 +27,7 @@ CLOSED: [2014-02-19 Wed 12:19]
 :ORDERED: t
 :END:
 
-*** DONE Test TODO
+** DONE Test TODO
 CLOSED: [2014-02-19 Wed 12:01]
 - State "DONE"       from "TODO"       [2014-02-19 Wed 12:01]
 
@@ -43,7 +43,7 @@ CLOSED: [2014-02-19 Wed 12:01]
 
    - CLOSING NOTE [2014-02-18 Tue 15:48] \\
      started wor
-*** DONE Fix org mode based on Nurk's email                 :wednesday:org:
+** DONE Fix org mode based on Nurk's email                 :wednesday:org:
 CLOSED: [2014-02-19 Wed 15:11]
 - State "DONE"       from "TODO"       [2014-02-19 Wed 15:11]
 CLOCK: [2014-02-19 Wed 14:58]--[2014-02-19 Wed 15:11] =>  0:13
@@ -56,7 +56,7 @@ CLOCK: [2014-02-19 Wed 12:03]--[2014-02-19 Wed 12:04] =>  0:01
 - State "TODO"       from "IN_PROGRESS" [2014-02-19 Wed 12:01]
 
 
-*** DONE Class
+** DONE Class
 CLOSED: [2014-02-24 Mon 15:06]
 :LOGBOOK:
 - State "DONE"       from "TODO"       [2014-02-24 Mon 15:06]
@@ -64,7 +64,7 @@ CLOCK: [2014-02-20 Thu 14:49]--[2014-02-20 Thu 15:51] =>  1:02
 - Classtime.
 CLOCK: [2014-02-20 Thu 14:42]--[2014-02-20 Thu 14:42] =>  0:00
 :END:
-*** DONE Attempting to clean this file
+** DONE Attempting to clean this file
 CLOSED: [2014-02-19 Wed 15:25]
 - State "DONE"       from ""           [2014-02-19 Wed 15:25]
 CLOCK: [2014-02-19 Wed 15:12]--[2014-02-19 Wed 15:22] =>  0:10
@@ -72,7 +72,7 @@ CLOCK: [2014-02-19 Wed 15:12]--[2014-02-19 Wed 15:22] =>  0:10
   That's just gonna be a mess to read. Did find how to further indent each line so
   that it looks a bit cleaner. Logbook still not showing up.
 
-*** DONE Back onto Logbook
+** DONE Back onto Logbook
 CLOSED: [2014-02-24 Mon 15:11]
 :LOGBOOK:
 - State "DONE"       from "TODO"       [2014-02-24 Mon 15:11]
@@ -90,7 +90,7 @@ CLOCK: [2014-02-19 Wed 15:24]--[2014-02-19 Wed 15:51] =>  0:27
 :Effort:   0:30
 :END:
 
-*** DONE Foo
+** DONE Foo
 CLOSED: [2014-02-19 Wed 18:02]
 :LOGBOOK:
 - State "DONE"       from "IN_PROGRESS" [2014-02-19 Wed 18:02]
@@ -102,13 +102,13 @@ CLOCK: [2014-02-19 Wed 16:23]--[2014-02-19 Wed 16:23] =>  0:00
 CLOCK: [2014-02-19 Wed 16:21]--[2014-02-19 Wed 16:23] =>  0:02
 CLOCK: [2014-02-19 Wed 15:53]--
 
-*** DONE Prepping for the weekend
+** DONE Prepping for the weekend
 CLOCK: [2014-02-19 Wed 21:13]--[2014-02-19 Wed 21:19] =>  0:06
 - On to checking if I can get the logbook to work.
 
 
 
-*** DONE Logbook on mac
+** DONE Logbook on mac
 CLOSED: [2014-02-24 Mon 15:14]
 :LOGBOOK:
 - State "DONE"       from "TODO"       [2014-02-24 Mon 15:14]
@@ -125,7 +125,7 @@ CLOCK: [2014-02-19 Wed 21:40]--[2014-02-19 Wed 21:47] =>  0:07
 CLOCK: [2014-02-19 Wed 21:20]--[2014-02-19 Wed 21:40] =>  0:20
 - Switched computers.
 
-*** DONE Learning more emacs
+** DONE Learning more emacs
 CLOSED: [2014-02-24 Mon 15:14]
 :LOGBOOK:
 - State "DONE"       from "TODO"       [2014-02-24 Mon 15:14]
@@ -137,7 +137,7 @@ CLOCK: [2014-02-19 Wed 16:25]--[2014-02-19 Wed 17:28] =>  1:03
 
 
 
-*** DONE New Test... The other broke?                            :test:
+** DONE New Test... The other broke?                                :test:
 CLOSED: [2014-02-24 Mon 15:04]
 :LOGBOOK:
 - State "DONE"       from "IN_PROGRESS" [2014-02-24 Mon 15:04]
@@ -149,7 +149,7 @@ CLOCK: [2014-02-19 Wed 22:21]--[2014-02-19 Wed 22:26] =>  0:05
 - More testing...
 :END:
 
-*** DONE Test                                                    :test:
+** DONE Test                                                        :test:
 CLOSED: [2014-02-24 Mon 15:04]
 :LOGBOOK:
 - State "DONE"       from "TODO"       [2014-02-24 Mon 15:04]
@@ -162,7 +162,7 @@ CLOCK: [2014-02-19 Wed 22:09]--[2014-02-19 Wed 22:16] =>  0:07
 - Commenting out the (require 'org) from my .emacs solved the problem...
 
 
-*** DONE Test 10000                                              :test:
+** DONE Test 10000                                                  :test:
 CLOSED: [2014-02-24 Mon 15:04]
 :LOGBOOK:
 - State "DONE"       from "TODO"       [2014-02-24 Mon 15:04]
@@ -172,8 +172,10 @@ CLOCK: [2014-02-19 Wed 22:42]--[2014-02-20 Thu 00:22] =>  1:40
 
 
 
-*** IN_PROGRESS Dictionary list page
+** DONE Dictionary list page
+CLOSED: [2014-02-27 Thu 15:05]
 :LOGBOOK:
+- State "DONE"       from "IN_PROGRESS" [2014-02-27 Thu 15:05]
 CLOCK: [2014-02-24 Mon 16:45]--[2014-02-24 Mon 18:03] =>  1:18
 - Got the page working. Need some seeds in the db now.
 - State "TODO"       from "IN_PROGRESS" [2014-02-24 Mon 15:15]
@@ -185,17 +187,44 @@ CLOCK: [2014-02-24 Mon 14:56]--[2014-02-24 Mon 16:37] =>  1:41
 :END:
 
 
-*** IN_PROGRESS Survey CRUD page
+** DONE Survey CRUD page
+CLOSED: [2014-02-27 Thu 15:05]
 :LOGBOOK:
+- State "DONE"       from "IN_PROGRESS" [2014-02-27 Thu 15:05]
 CLOCK: [2014-02-24 Mon 21:12]--[2014-02-24 Mon 23:04] =>  1:52
 - Got everything started up. These messages feel like they're the same as my commit messages...
 :END:
 
 
-*** DONE Enabling ssh into vb
+** DONE Enabling ssh into vb
 CLOSED: [2014-02-24 Mon 16:45]
 :LOGBOOK:
 - State "DONE"       from "TODO"       [2014-02-24 Mon 16:45]
 CLOCK: [2014-02-24 Mon 16:37]--[2014-02-24 Mon 16:45] =>  0:08
+:END:
+
+
+
+* Week 2
+** DONE Code Review                                                :class:
+CLOSED: [2014-02-27 Thu 15:02]
+:LOGBOOK:
+- CLOSING NOTE [2014-02-27 Thu 15:02] \\
+  Went well.
+CLOCK: [2014-02-25 Tue 13:58]--[2014-02-25 Tue 15:46] =>  1:48
+- Everyone fails. False.
+:END:
+** DONE Thursday                                                   :class:
+CLOSED: [2014-02-27 Thu 15:04]
+:LOGBOOK:
+CLOCK: [2014-02-27 Thu 13:58]--[2014-02-27 Thu 15:03] =>  1:05
+- Talked about nginx and other servers.
+:END:
+** IN_PROGRESS Django tests                                        :class:
+:LOGBOOK:
+- State "IN_PROGRESS" from "TODO"       [2014-02-27 Thu 15:54] \\
+  Doin stuff..
+CLOCK: [2014-02-27 Thu 15:03]--[2014-02-27 Thu 15:53] =>  0:50
+- Started learning about Django testing.
 :END:
 
