--- a/timelogs/timelog-duggan.org
+++ b/timelogs/timelog-duggan.org
@@ -53,5 +53,22 @@ CLOCK: [2014-02-22 Sat 00:09]--[2014-02-22 Sat 02:15] =>  2:06
 CLOCK: [2014-02-19 Wed 10:43]--[2014-02-19 Wed 10:46] =>  0:03
 - I think its working! Now I don't have all these time logs cluttering up my TODOs!
 :END:
-
+** TODO Class time for the week of the 23rd                        :bduggan:
+:LOGBOOK:
+CLOCK: [2014-02-27 Thu 13:35]--[2014-02-27 Thu 15:55] =>  2:20
+- Worked on crud
+CLOCK: [2014-02-25 Tue 13:40]--[2014-02-25 Tue 15:55] =>  2:15
+- Class for Tuesday
+:END:
+** TODO Work on CRUD for Projects/other work
+:LOGBOOK:
+CLOCK: [2014-03-02 Sun 10:52]--[2014-03-02 Sun 13:36] =>  2:44
+- Worked on testing and stuff
+CLOCK: [2014-02-28 Fri 18:49]--[2014-02-28 Fri 21:25] =>  2:36
+- Worked on finishing up CRUD for Projects
+CLOCK: [2014-02-25 Tue 17:48]--[2014-02-25 Tue 19:10] =>  1:22
+- Fixed stuff we talked about in code review
+CLOCK: [2014-02-24 Mon 19:47]--[2014-02-24 Mon 21:47] =>  2:00
+- Worked with Dustin and Ryan on initial Project stuff
+:END:
 
