--- a/timelogs/timelog-dwaldron.org
+++ b/timelogs/timelog-dwaldron.org
@@ -5,74 +5,87 @@
 
 * SPRING 2014 SOFTWARE STUDIO III LOG
 ** WEEK 1 (2/11/14 - 2/17/14)
-*** Studio class time :dustin:
+*** DONE Studio class time                                           :dustin:
 CLOCK: [2014-02-11 Tue 15:00]--[2014-02-11 Tue 17:00] =>  2:00
 Took time to make virtualbox pretty
 
-*** Studio class time :dustin:
+*** DONE Studio class time                                           :dustin:
 CLOCK: [2014-02-13 Thu 14:00]--[2014-02-13 Thu 16:00] =>  2:00
 Worked with studio group and Colagn to make ERD of websurv
 
-*** Ditching eVIl and learning emacs :dustin:
+*** DONE Ditching eVIl and learning emacs                            :dustin:
 CLOCK: [2014-02-15 Sat 13:00]--[2014-02-15 Sat 17:00] =>  4:00
 - did it
 Learning emacs commands and life without vim. Confession: Still installed vim 
 on virtualbox anyway.
 
-*** Read about Django-rest and angularjs :dustin:
+*** DONE Read about Django-rest and angularjs                        :dustin:
 CLOCK: [2014-02-17 Mon 11:00]--[2014-02-17 Mon 13:00] =>  2:00
 Read and watched a tutorial on django-rest at this link:
 blog.kevinastone.com/getting-started-with-django-rest-framework-and-angularjs.html
 
-*** Re-read git documentation. :dustin:
+*** DONE Re-read git documentation.                                  :dustin:
 CLOCK: [2014-02-17 Mon 19:00]--[2014-02-17 Mon 21:00] =>  2:00
 Learned how to make, merge, and delete branches
 and why branches are important. I don't miss svn.
 
 
 ** WEEK 2 (2/18/14 - 2/24/14)
-*** Studio class time :dustin:
+*** DONE Studio class time                                           :dustin:
 CLOCK: [2014-02-18 Tue 15:00]--[2014-02-18 Thu 16:00] =>  1:00
 Reconfigured ./virtualenvs/ file and made virtualenv 
 for websurv complete with exported DJANGO_SETTINGS_MODULE
 variable.
   
-*** Studio class time :dustin:
+*** DONE Studio class time                                           :dustin:
 CLOCK: [2014-02-20 Thu 14:01]--[2014-02-20 Thu 16:01] =>  2:00
 - Discussed UX/Wireframe look, talked about templates and who works on what
 
-*** Worked on templates and boostrap navs :dustin:
+*** DONE Worked on templates and boostrap navs                       :dustin:
 CLOCK: [2014-02-20 Thu 22:00]--[2014-02-21 Fri 01:00] =>  3:00
 - Started naviagation menu and other template files
  
-*** Worked more on templates and breadcrumbs :dustin:
+*** DONE Worked more on templates and breadcrumbs                    :dustin:
 CLOCK: [2014-02-21 Fri 15:00]--[2014-02-21 Fri 17:00] =>  2:00
 - Fixed urls and views file. Mapped cse account with virtualbox. Made static directory and css file and linked to base.html. Plan to modify navbar
   with Adam and make admin configuration page.
   
-*** Worked on admin page and templates :dustin:
+*** DONE Worked on admin page and templates                          :dustin:
 CLOCK: [2014-02-23 Sun 21:00]--[2014-02-24 Mon 01:00] =>  4:00
 - Read Django Admin Documentation, modified admin.py file, played with urls/views.py
 
 
 ** WEEK 3 (2/25/14 - 3/3/14)
-*** Studio class time :dustin:
+*** DONE Studio class time                                           :dustin:
 CLOCK: [2014-02-25 Tue 15:00]--[2014-02-25 Tue 17:00] =>  2:00
 - Code review day! Help newbies with django templates/urls
 
+*** DONE Studio class time                                           :dustin:
+CLOCK: [2014-02-27 Thu 14:00]--[2014-02-27 Thu 16:00] =>  2:00
+- Eginx, The Habs, and make get_absolute_url link for models in templates
 
-*** Studio class time :dustin:
-
-
-*** Worked on breadcrumb menu
+*** DONE Worked on breadcrumb menu                                   :dustin:
 CLOCK: [2014-02-26 Wed 19:00]--[2014-02-26 Wed 22:00] =>  3:00
 - Added more functionality to breadcrumb menu. Need to find better way to keep track of urls
+  
+*** TODO Worked more on breadcrumb menu                              :dustin:
+CLOCK: [2014-02-27 Thu 12:00]--[2014-02-27 Thu 14:00] =>  2:00
+- Worked on views, urls, and breadcrumbs
+
+*** DONE Read in the beginning was the commandline :dustin:
+CLOCK: [2014-03-01 Sat 17:00]--[2014-03-01 Sat 20:00] =>  3:00
+- read paper
+
 
 
 ** WEEK 4 (3/4/14 - 3/10/14)
 *** Studio class time :dustin:
+CLOCK: [2014-03-04 Tue 15:00]--[2014-03-04 Tue 16:00] =>  1:00
+- studio time to work on templates of variety
 
 *** Studio class time :dustin:
+CLOCK: [2014-03-06 Thu 14:00]--[2014-03-06 Thu 16:00] =>  2:00
+- Worked on templates; Colgan delegated tasks
 
 
 ** WEEK 5 (3/11/14 - 3/17/14)
@@ -132,27 +145,29 @@ CLOCK: [2014-02-26 Wed 19:00]--[2014-02-26 Wed 22:00] =>  3:00
 
 * CLOCKTABLE CHART
 #+BEGIN: clocktable :maxlevel 3 :scope file
-Clock summary at [2014-02-26 Wed 21:36]
+Clock summary at [2014-02-27 Thu 15:14]
 
 | Headline                                        | Time    |       |      |
 |-------------------------------------------------+---------+-------+------|
-| *Total time*                                    | *29:00* |       |      |
+| *Total time*                                    | *33:00* |       |      |
 |-------------------------------------------------+---------+-------+------|
-| SPRING 2014 SOFTWARE STUDIO III LOG             | 29:00   |       |      |
+| SPRING 2014 SOFTWARE STUDIO III LOG             | 33:00   |       |      |
 | \__ WEEK 1 (2/11/14 - 2/17/14)                  |         | 12:00 |      |
-| \_____ Studio class time                        |         |       | 2:00 |
-| \_____ Studio class time                        |         |       | 2:00 |
-| \_____ Ditching eVIl and learning emacs         |         |       | 4:00 |
-| \_____ Read about Django-rest and angularjs     |         |       | 2:00 |
-| \_____ Re-read git documentation.               |         |       | 2:00 |
+| \_____ DONE Studio class time                   |         |       | 2:00 |
+| \_____ DONE Studio class time                   |         |       | 2:00 |
+| \_____ DONE Ditching eVIl and learning emacs    |         |       | 4:00 |
+| \_____ DONE Read about Django-rest and...       |         |       | 2:00 |
+| \_____ DONE Re-read git documentation.          |         |       | 2:00 |
 | \__ WEEK 2 (2/18/14 - 2/24/14)                  |         | 12:00 |      |
-| \_____ Studio class time                        |         |       | 1:00 |
-| \_____ Studio class time                        |         |       | 2:00 |
-| \_____ Worked on templates and boostrap navs    |         |       | 3:00 |
-| \_____ Worked more on templates and breadcrumbs |         |       | 2:00 |
-| \_____ Worked on admin page and templates       |         |       | 4:00 |
-| \__ WEEK 3 (2/25/14 - 3/3/14)                   |         |  5:00 |      |
-| \_____ Studio class time                        |         |       | 2:00 |
-| \_____ Worked on breadcrumb menu                |         |       | 3:00 |
+| \_____ DONE Studio class time                   |         |       | 1:00 |
+| \_____ DONE Studio class time                   |         |       | 2:00 |
+| \_____ DONE Worked on templates and boostrap... |         |       | 3:00 |
+| \_____ DONE Worked more on templates and...     |         |       | 2:00 |
+| \_____ DONE Worked on admin page and templates  |         |       | 4:00 |
+| \__ WEEK 3 (2/25/14 - 3/3/14)                   |         |  9:00 |      |
+| \_____ DONE Studio class time                   |         |       | 2:00 |
+| \_____ DONE Studio class time                   |         |       | 2:00 |
+| \_____ DONE Worked on breadcrumb menu           |         |       | 3:00 |
+| \_____ TODO Worked more on breadcrumb menu      |         |       | 2:00 |
 #+END:
 
