To be continued...

--- a/timelogs/timelog-southworth.org
+++ b/timelogs/timelog-southworth.org
@@ -187,7 +187,6 @@ CLOCK: [2014-02-24 Mon 14:56]--[2014-02-24 Mon 16:37] =>  1:41
 - Caught bad error again where the vb freezes up. Waited a while and it came back though.
 :END:
 
-
 ** DONE Survey CRUD page
 CLOSED: [2014-02-27 Thu 15:05]
 :LOGBOOK:
@@ -195,7 +194,6 @@ CLOSED: [2014-02-27 Thu 15:05]
 CLOCK: [2014-02-24 Mon 21:12]--[2014-02-24 Mon 23:04] =>  1:52
 - Got everything started up. These messages feel like they're the same as my commit messages...
 :END:
-
 
 ** DONE Enabling ssh into vb
 CLOSED: [2014-02-24 Mon 16:45]
@@ -215,13 +213,14 @@ CLOSED: [2014-02-27 Thu 15:02]
 CLOCK: [2014-02-25 Tue 13:58]--[2014-02-25 Tue 15:48] =>  1:50
 - Everyone fails. False.
 :END:
-** DONE Thursday                                                   :class:
+** DONE Thursday                                                      :class:
 CLOSED: [2014-02-27 Thu 15:04]
 :LOGBOOK:
 CLOCK: [2014-02-27 Thu 13:58]--[2014-02-27 Thu 15:03] =>  1:05
 - Talked about nginx and other servers.
 :END:
-** IN_PROGRESS Learning about Django tests                  :class:django:
+
+** IN_PROGRESS Learning about Django tests                     :class:django:
 :LOGBOOK:
 CLOCK: [2014-03-02 Sun 15:49]--[2014-03-02 Sun 16:51] =>  1:02
 - Switching over..
@@ -230,7 +229,7 @@ CLOCK: [2014-03-02 Sun 15:49]--[2014-03-02 Sun 16:51] =>  1:02
 CLOCK: [2014-02-27 Thu 15:03]--[2014-02-27 Thu 15:53] =>  0:50
 - Started learning about Django testing.
 :END:
-** IN_PROGRESS Learning the template system                       :django:
+** IN_PROGRESS Learning the template system                          :django:
 :LOGBOOK:
 CLOCK: [2014-03-02 Sun 19:48]--[2014-03-02 Sun 21:28] =>  1:40
 - Read a lot of stuff. Commented in a few things for later.
@@ -241,6 +240,19 @@ CLOCK: [2014-03-02 Sun 16:51]--[2014-03-02 Sun 18:16] =>  1:25
 * Week 3
 ** IN_PROGRESS Tuesday                                             :class:
 :LOGBOOK:
-CLOCK: [2014-03-04 Tue 14:03]
+CLOCK: [2014-03-04 Tue 14:03]--[2014-03-04 Tue 16:00] =>  1:57
+- Got lots of stuff done. Meeting in here at 9 tonight if free.
+:END:
+** IN_PROGRESS Thursday                                            :class:
+:LOGBOOK:
+CLOCK: [2014-03-06 Thu 13:50]--[2014-03-06 Thu 15:56] =>  2:06
+- Git craziness. Done with first iteration.
+:END:
+** TODO Combine/unify my 4 init.el files so stuff makes sense again... :emacs:
+:LOGBOOK:
+CLOCK: [2014-03-08 Sat 18:02]
+:END:
+:PROPERTIES:
+:Effort:   2:00
 :END:
 
