--- a/timelogs/timelog-duggan.org
+++ b/timelogs/timelog-duggan.org
@@ -23,8 +23,10 @@ CLOCK: [2014-02-18 Tue 13:42]--[2014-02-18 Tue 15:49] =>  2:07
 - done with class time for the 18th of February
 CLOCK: [2014-02-18 Tue 13:25]--[2014-02-18 Tue 13:38] =>  0:13
 - Have to log out for changing settings
-** TODO Read and walkthrough Django Tutorial                       :bduggan:
+** DONE Read and walkthrough Django Tutorial                       :bduggan:
+CLOSED: [2014-03-10 Mon 22:48]
 :LOGBOOK:
+- CLOSING NOTE [2014-03-10 Mon 22:48]
 CLOCK: [2014-02-20 Thu 13:20]--[2014-02-20 Thu 14:03] =>  0:43
 - did more tutorial stuffs
 CLOCK: [2014-02-19 Wed 23:43]--[2014-02-20 Thu 01:27] =>  1:44
@@ -67,8 +69,11 @@ CLOCK: [2014-02-27 Thu 13:35]--[2014-02-27 Thu 15:55] =>  2:20
 CLOCK: [2014-02-25 Tue 13:40]--[2014-02-25 Tue 15:55] =>  2:15
 - Class for Tuesday
 :END:
-** TODO Work on CRUD for Projects/other work                       :bduggan:
+** DONE Work on CRUD for Projects/other work                       :bduggan:
+CLOSED: [2014-03-10 Mon 22:48]
 :LOGBOOK:
+- CLOSING NOTE [2014-03-10 Mon 22:48] \\
+  Projects are fully implemented I think and unit tested to the best of my abililty
 CLOCK: [2014-03-02 Sun 10:52]--[2014-03-02 Sun 13:36] =>  2:44
 - Worked on testing and stuff
 CLOCK: [2014-02-28 Fri 18:49]--[2014-02-28 Fri 21:25] =>  2:36
@@ -78,11 +83,27 @@ CLOCK: [2014-02-25 Tue 17:48]--[2014-02-25 Tue 19:10] =>  1:22
 CLOCK: [2014-02-24 Mon 19:47]--[2014-02-24 Mon 21:47] =>  2:00
 - Worked with Dustin and Ryan on initial Project stuff
 :END:
-** TODO Class time for the week of the 2nd                         :bduggan:
+** DONE Class time for the week of the 2nd                         :bduggan:
+CLOSED: [2014-03-10 Mon 22:48]
 :LOGBOOK:
+- CLOSING NOTE [2014-03-10 Mon 22:48]
 CLOCK: [2014-03-06 Thu 13:59]--[2014-03-06 Thu 15:50] =>  1:51
 - class over!!!
 CLOCK: [2014-03-04 Tue 13:58]--[2014-03-04 Tue 15:54] =>  1:56
 - finished class time yo
+:END:
+** TODO Worked on Glosses/Dictionary CRUD                          :bduggan:
+:LOGBOOK:
+CLOCK: [2014-03-09 Sun 20:10]--[2014-03-09 Sun 22:44] =>  2:34
+- Did more Glosses stuff
+CLOCK: [2014-03-07 Fri 20:40]--[2014-03-07 Fri 22:50] =>  2:10
+- Finished up dictionary, started on glosses with Ryan
+:END:
+** TODO Messed with the Koding and tried to put our project there  :bduggan:
+:LOGBOOK:
+CLOCK: [2014-03-10 Mon 18:47]--[2014-03-10 Mon 20:25] =>  1:38
+- Put nginx on the server, but I'm not really sure how to make it work
+CLOCK: [2014-03-09 Sun 13:45]--[2014-03-09 Sun 17:10] =>  3:25
+- Couldnt get it to run the website on the hosted url, but I have it running nonetheless...
 :END:
 
