--- a/timelogs/timelog-southworth.org
+++ b/timelogs/timelog-southworth.org
@@ -1,4 +1,5 @@
 
+
 #+NAME: Justin's Time Log
 #+AUTHOR: Justin Southworth
 #+DATE: Spring 2014
@@ -220,7 +221,8 @@ CLOCK: [2014-02-27 Thu 13:58]--[2014-02-27 Thu 15:03] =>  1:05
 - Talked about nginx and other servers.
 :END:
 
-** IN_PROGRESS Learning about Django tests                     :class:django:
+** DONE Learning about Django tests                         :class:django:
+CLOSED: [2014-03-12 Wed 22:30]
 :LOGBOOK:
 CLOCK: [2014-03-02 Sun 15:49]--[2014-03-02 Sun 16:51] =>  1:02
 - Switching over..
@@ -229,8 +231,10 @@ CLOCK: [2014-03-02 Sun 15:49]--[2014-03-02 Sun 16:51] =>  1:02
 CLOCK: [2014-02-27 Thu 15:03]--[2014-02-27 Thu 15:53] =>  0:50
 - Started learning about Django testing.
 :END:
-** IN_PROGRESS Learning the template system                          :django:
+** DONE Learning the template system                              :django:
+CLOSED: [2014-03-12 Wed 22:30]
 :LOGBOOK:
+- CLOSING NOTE [2014-03-12 Wed 22:30]
 CLOCK: [2014-03-02 Sun 19:48]--[2014-03-02 Sun 21:28] =>  1:40
 - Read a lot of stuff. Commented in a few things for later.
 CLOCK: [2014-03-02 Sun 16:51]--[2014-03-02 Sun 18:16] =>  1:25
@@ -238,26 +242,57 @@ CLOCK: [2014-03-02 Sun 16:51]--[2014-03-02 Sun 18:16] =>  1:25
 :END:
 
 * Week 3
-** IN_PROGRESS Tuesday                                             :class:
+** DONE Tuesday                                                    :class:
+CLOSED: [2014-03-11 Tue 13:59]
 :LOGBOOK:
+- CLOSING NOTE [2014-03-11 Tue 13:59] \\
+  Class be over.
 CLOCK: [2014-03-04 Tue 14:03]--[2014-03-04 Tue 16:00] =>  1:57
 - Got lots of stuff done. Meeting in here at 9 tonight if free.
 :END:
-** IN_PROGRESS Thursday                                            :class:
+** DONE Thursday                                                   :class:
+CLOSED: [2014-03-11 Tue 14:00]
 :LOGBOOK:
 CLOCK: [2014-03-06 Thu 13:50]--[2014-03-06 Thu 15:56] =>  2:06
 - Git craziness. Done with first iteration.
 :END:
-** TODO Combine/unify my 4 init.el files so stuff makes sense again... :emacs:org:
+** IN_PROGRESS Combine/unify my 4 init.el files so stuff makes sense again... :emacs:org:
 :LOGBOOK:
 CLOCK: [2014-03-08 Sat 18:02]--[2014-03-08 Sat 23:10] =>  5:08
 :END:
 :PROPERTIES:
 :Effort:   4:00
 :END:
-** TODO Read In the Beginning...
+** DONE Read In the Beginning...
+CLOSED: [2014-03-11 Tue 14:00]
 :LOGBOOK:
+- CLOSING NOTE [2014-03-11 Tue 14:00]
 CLOCK: [2014-03-10 Mon 14:56]--[2014-03-10 Mon 17:45] =>  2:49
 - Good stuff.
+:END:
+* Week 4
+** DONE Tuesday                                                    :class:
+CLOSED: [2014-03-12 Wed 22:30]
+:LOGBOOK:
+- CLOSING NOTE [2014-03-12 Wed 22:30]
+CLOCK: [2014-03-11 Tue 13:59]--[2014-03-11 Tue 15:48] =>  1:49
+- Ryan ___ from Aon.
+:END:
+** DONE Organizing
+CLOSED: [2014-03-12 Wed 23:25]
+:LOGBOOK:
+CLOCK: [2014-03-12 Wed 22:30]--[2014-03-12 Wed 22:46] =>  0:16
+- Just figuring out where things are at.
+:END:
+** DONE Mas emacsing                                                  :emacs:
+CLOSED: [2014-03-12 Wed 23:25]
+:LOGBOOK:
+CLOCK: [2014-03-12 Wed 22:46]--[2014-03-12 Wed 23:25] =>  0:39
+- Added auto indenting and some other stuff.
+:END:
+** IN_PROGRESS Writing dictionary tests
+:LOGBOOK:
+CLOCK: [2014-03-12 Wed 23:25]--[2014-03-13 Thu 00:17] =>  0:52
+- Getting somewhere. Stopped at delete for bed.
 :END:
 
